[project]
name = "orchestration"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cryptography>=45.0.6",
    "curl-cffi>=0.13.0",
    "dagster==1.11.6",
    "dagster-duckdb>=0.27.6",
    "dagster-postgres>=0.27.6",
    "duckdb>=1.3.2",
    "lxml>=6.0.0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.1",
    "playwright>=1.54.0",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "orchestration"
registry_modules = [
    "orchestration.components.*",
]


